# DAM-creation-tool

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.app.json  vite.config.ts
apps/native/: Cargo.toml
apps/native/src/: main.rs
apps/web/: Cargo.toml  index.html
apps/web/src/: lib.rs
assets/maps/: 10101.geojson  40098.geojson  54883.geojson  56031.geojson  56033.geojson  56057.geojson  56058.geojson  56064.geojson  56065.geojson  56070.geojson  56075.geojson  56077.geojson  56097.geojson  56100.geojson  56101.geojson  56102.geojson  56104.geojson  56105.geojson  56106.geojson  56110.geojson  56119.geojson  56120.geojson  56121.geojson  56123.geojson  56124.geojson  56125.geojson  56126.geojson  56129.geojson  56130.geojson  56131.geojson  56132.geojson  56133.geojson  56135.geojson  56136.geojson  56137.geojson  56140.geojson  56144.geojson  56145.geojson  56146.geojson  56148.geojson  (+158 more)
assets/preview/: switzerland-border.geojson
crates/dam-core/: Cargo.toml
crates/dam-core/src/: catalog.rs  distribution.rs  export.rs  geometry.rs  lib.rs  model.rs  validation.rs
crates/dam-core/src/export/: aixm.rs  json.rs  mod.rs  (+1 more)
crates/dam-egui/: Cargo.toml
crates/dam-egui/src/: export_status.rs  form.rs  lib.rs  online_tiles.rs  platform.rs  preview.rs  submission.rs
crates/dam-egui/src/frost_night/: mod.rs
crates/dam-egui/src/frost_night/components/: badge.rs  button.rs  checkbox.rs  input.rs  mod.rs  segmented.rs  separator.rs  toggle.rs
crates/dam-egui/src/frost_night/composites/: mod.rs  top_toolbar.rs
crates/dam-egui/src/frost_night/containers/: accordion.rs  card.rs  drag_card.rs  mod.rs  surface.rs  tabs.rs
crates/dam-egui/src/frost_night/effects/: mod.rs
crates/dam-egui/src/frost_night/icons/: mod.rs
crates/dam-egui/src/frost_night/theme/: mod.rs  oklch.rs  scale.rs  style.rs  tokens.rs  typography.rs
docs/: AIXM_PREVIEW_DESIGN.md  FEATURES.md  GLOSSARY.md  architecture.md
prompts/: rust-egui-migration-plan.md
scripts/: dam
src/: App.tsx  main.tsx
src/components/: MapCreationForm.tsx  theme-switcher.tsx
src/components/form/: checkbox-field.tsx  range-picker-field.tsx  select-field.tsx  subscribe-button.tsx  switch-field.tsx  text-area-field.tsx  text-field.tsx
src/components/sections/: AdditionalInformationSection.tsx  AltitudeCorrectionSection.tsx  BasicSection.tsx  PeriodSection.tsx
src/features/map-creation-tool/: dam-schemas.ts  page.tsx  shared-form.ts
src/hooks/: form.tsx
(+7 files in other folders)
