[workspace]
members = [
  "apps/native",
  "apps/web",
  "crates/dam-core",
  "crates/dam-egui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dam-core = { path = "crates/dam-core" }
dam-egui = { path = "crates/dam-egui" }
eframe = "0.34.1"
egui = "0.34.1"
earcutr = "0.4.3"
geo = "0.32.0"
include_dir = "0.7.4"
js-sys = "0.3.82"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
walkers = "0.53.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
