[package]
name = "dam-egui"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["icons"]
icons = []
serde = ["dep:serde", "egui/serde"]

[dependencies]
chrono.workspace = true
dam-core.workspace = true
earcutr.workspace = true
eframe.workspace = true
egui.workspace = true
geo.workspace = true
js-sys.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
walkers.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "Element",
  "HtmlAnchorElement",
  "Url",
  "Window",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd.workspace = true
